k8s-basics/004-ingress/foobar.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foobar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: foobar
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo-app
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=foo"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: foobar
spec:
  selector:
    app: foo  
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  namespace: foobar
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar-app
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=bar"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: bar
  namespace: foobar
spec:
  selector:
    app: bar  
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar-ingress
  namespace: foobar
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: foo
            port:
              number: 5678
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: bar
            port:
              number: 5678
---
