k8s-basics/004-ingress/metabase.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metabase
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  namespace: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - name: metabase
        image: metabase/metabase:v0.38.1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
spec:
  selector:
    app: metabase  
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: metabase
spec:
  rules:
  - host: metabase.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: metabase
            port:
              number: 3000
